samples/_failures_safe/1761660924_e616d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cc22356.c: In function ‘main’:
./samples/SAFE/__tmp_9cc22356.c:171:5: error: expected declaration or statement at end of input
  171 |     }
      |     ^
